[package]
name = "otpauth"
authors = ["Liu Bowen <asyncmode@outlook.com>"]
version = "0.1.0"
edition = "2021"
keywords = ["otp", "hotp", "totp", "authenticator"]
repository = "https://github.com/lbwa/one-time-password"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
derive_builder = "0.12.0"
ring = "0.17.5"
