[package]
name = "otps-cli"
version = "0.1.0"
edition = "2021"
keywords = ["otp", "hotp", "totp", "authenticator"]
description = "HOTP and TOTP clients to generate one-time password"
repository = "https://github.com/lbwa/otp"
homepage = "https://docs.rs/otps"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.2.1", default-features = false }
clap = { version = "4.4.8", features = ["derive"] }
otps = { version = "*", path = "../otps" }
rustyline = "12.0.0"
