[package]
name = "otps"
authors = ["Liu Bowen <asyncmode@outlook.com>"]
version = "0.1.1"
edition = "2021"
keywords = ["otp", "hotp", "totp", "authenticator"]
description = "Out-of-box HOTP and TOTP client to generate one-time password"
repository = "https://github.com/lbwa/otp"
homepage = "https://docs.rs/otps"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
derive_builder = "0.12.0"
ring = "0.17.5"
